--- a/templates/prescription.html
+++ b/templates/prescription.html
@@ -76,19 +76,19 @@
           </div>
           <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
             <div class="min-h-full flex items-center justify-center">
-              <div class="bg-white shadow-lg rounded-lg p-8 max-w-lg w-full">
-                  <h1 class="text-3xl font-bold text-center text-gray-700 mb-6">Prescription</h1>
+              <div class="bg-white dark:bg-gray-800 text-gray-700 dark:text-white shadow-lg rounded-lg p-8 max-w-lg w-full">
+                  <h1 class="text-3xl font-bold text-center mb-6">Prescription</h1>
       
                   {% if prescriptions %}
                       {% for prescription in prescriptions %}
-                          <p class="text-lg text-gray-600 whitespace-pre-line mb-4">{{ prescription }}</p>
+                          <p class="text-lg whitespace-pre-line mb-4">{{ prescription }}</p>
                       {% endfor %}
                   {% else %}
-                      <p class="text-lg text-gray-600">No prescriptions available.</p>
+                      <p class="text-lg">No prescriptions available.</p>
                   {% endif %}
       
                   <div class="text-center mt-6">
-                      <a href="/" class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded-md">Go Back</a>
+                      <a href="/" class="bg-green-500 hover:bg-green-700 text-white py-2 px-4 rounded-md">Go Back</a>
                   </div>
               </div>
           </div>
