--- a/templates/prescription.html
+++ b/templates/prescription.html
@@ -74,7 +74,7 @@
               </a> 
             -->
           </div>
-          <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
+          <div class="lg:mt-0 lg:col-span-5 lg:flex">
             <div class="min-h-full flex items-center justify-center">
               <div class="bg-white dark:bg-gray-800 text-gray-700 dark:text-white shadow-lg rounded-lg p-8 max-w-lg w-full">
                   <h1 class="text-3xl font-bold text-center mb-6">Prescription</h1>
