--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -90,6 +90,8 @@
             </p>
         </div>
     </section>
+
+
     <section class="bg-white dark:bg-gray-900">
         <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6 ">
             <div class="mx-auto max-w-screen-sm text-center mb-8 lg:mb-16">
@@ -98,7 +100,7 @@
             </div> 
             <div class="grid gap-8 mb-6 lg:mb-16 md:grid-cols-2">
                 <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
-                    <a href="#">
+                    <a>
                                 <img 
         class="normal-image" 
         src="{{ url_for('static', filename='img/nitigya.png') }}"
@@ -124,7 +126,7 @@
                     </div>
                 </div> 
                 <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
-                    <a href="#">
+                    <a>
                         <img width="150px" height="150px"
                         class="normal-image" 
                         src="{{ url_for('static', filename='img/chirayu.png') }}"
@@ -143,14 +145,14 @@
                     </a>
                     <div class="p-5">
                         <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
-                            <a href="#">Chirayu Sahu</a>
+                            <a>Chirayu Sahu</a>
                         </h3>
                         <span class="text-gray-500 dark:text-gray-400">Co-Founder and Front-end Developer</span>
                         <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Chirayu drives the technical strategy of the ReachMe platform and brand.</p>
                     </div>
                 </div> 
                 <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
-                    <a href="#">
+                    <a>
                         <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="{{ url_for('static', filename='img/pranav.png') }}" alt="Michael Avatar">
                     </a>
                     <div class="p-5">
@@ -158,11 +160,11 @@
                             <a href="#">Pranav Ramesh</a>
                         </h3>
                         <span class="text-gray-500 dark:text-gray-400">Co-Founder and Web, Back-end Developer</span>
-                        <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Pranav drives the technical strategy of the flowbite platform and brand.</p>
+                        <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Pranav drives the technical strategy of the ReachMe platform and brand.</p>
                     </div>
                 </div> 
                 <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
-                    <a href="#">
+                    <a>
                         <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="{{ url_for('static', filename='img/aarav.png') }}" alt="Sofia Avatar">
                     </a>
                     <div class="p-5">
@@ -170,7 +172,7 @@
                             <a href="#">Aarav Gupta</a>
                         </h3>
                         <span class="text-gray-500 dark:text-gray-400">Co-Founder and Front-end Developer </span>
-                        <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Aarav drives the technical strategy of the flowbite platform and brand.</p>
+                        <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Aarav drives the technical strategy of the ReachMe platform and brand.</p>
                     </div>
                 </div>  
             </div>  
